dist_man1_MANS=

if BUILD_GARLICCOIND
  dist_man1_MANS+=garliccoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=garliccoin-qt.1
endif

if BUILD_GARLICCOIN_CLI
  dist_man1_MANS+=garliccoin-cli.1
endif

if BUILD_GARLICCOIN_TX
  dist_man1_MANS+=garliccoin-tx.1
endif

if BUILD_GARLICCOIN_UTIL
  dist_man1_MANS+=garliccoin-util.1
endif

if ENABLE_WALLET
if BUILD_GARLICCOIN_WALLET
  dist_man1_MANS+=garliccoin-wallet.1
endif
endif
